--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ dependencies:
   # Notifications
   flutter_local_notifications: ^17.2.2
   timezone: ^0.9.4
+  sqflite: ^2.4.2
+  path: ^1.9.1
+  connectivity_plus: ^7.0.0
+  uuid: ^4.5.2
+  workmanager: ^0.9.0+3
 
 dev_dependencies:
   flutter_test:
