--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   connectivity_plus: ^7.0.0
   uuid: ^4.5.2
   workmanager: ^0.9.0+3
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
